fix : PwPopup과 answercontent-check의 z-index 조정 (#146)

--- a/src/components/common/PopUp/PwPopUp.module.scss
+++ b/src/components/common/PopUp/PwPopUp.module.scss
@@ -7,6 +7,8 @@
   border-radius: 12px;
   border: 1px solid $secondary;
   background-color: $white;
+  z-index: 999;
+  position: relative;
 
   width: 190px;
 
